--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,32 +10,39 @@ body {
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: blanchedalmond;
+    background-color: beige;
 }
 
 header {
     display: flex;
     width: 100%;
     padding: 10px 6px;
-    background-color: grey;
+    background-color:grey;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
     display: flex;
-    width: 70%;
+    width: 100%;
     height: 100%;
-    margin: 10px 0px;
+
+    #filter {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        margin: 5px 10px;
+        padding: 10px;
+    }
 
     #newsContainer {
         display: flex;
         flex-direction: column;
         width: 100%;
         height: 100%;
-        padding: 10px;
+        padding: 10px 60px;
 
         .newscard {
             border: 1px solid black;
